temp fix for tab causing jump between elements

--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -1,5 +1,10 @@
 .react-board-layout {
+    display: none;
     position: absolute;
     transition: height 300ms ease;
     transition-property: transform;
+}
+
+.react-board-layout.active {
+    display: block;
 }
